--- a/index.html
+++ b/index.html
@@ -3,33 +3,34 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>회원 등록</title>
+    <title>수비코딩</title>
+    <link rel = "stylesheet" href="style.css">
 </head>
 <body>
     <div id="wrapper" class="wrapper">
         <form id="registrationForm" class="registrationForm">
-            <h2>회원등록</h2>
+            <h2>회원 등록</h2>
             <div class = "inputGroup">
                 <label for="nickname">사용자 이름</label>
                 <input type="text" id="nickname" class="nicknameInput">
                 <span class="helperText">알림</span>
             </div>
-            <div>
+            <div class = "inputGroup">
                 <label for="userEmail">이메일 주소</label>
                 <input type="email" id="email" class="emailInput">
                 <span class="helperText">알림</span>
             </div>
-            <div>
+            <div clss = "inputGroup">
                 <label for="userPassword">비밀번호</label>
                 <input type="password" id="password" class="passwordInput">
                 <span class="helperText">알림</span>
             </div>
-            <div>
+            <div class = "inputGroup">
                 <label for="confirmPassword">비밀번호 확인</label>
                 <input type="password" id="confirmPassword" class="confirmPasswordInput">
                 <span class="helperText">알림</span>
             </div>
-            <div>
+            <div class = "inputGroup">
                 <label for="phone">휴대폰 번호</label>
                 <input type="tel" id="phone" class="phoneInput">
                 <span class="helperText">예: 010-1234-5678</span>
