--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                 <input type="email" id="email" class="emailInput">
                 <span class="helperText">알림</span>
             </div>
-            <div clss = "inputGroup">
+            <div class = "inputGroup">
                 <label for="userPassword">비밀번호</label>
                 <input type="password" id="password" class="passwordInput">
                 <span class="helperText">알림</span>
