JS: js 연결, 변수 선언, 알림 메서드 생성
~ JAVASCRIPT 프로젝트1

--- a/index.html
+++ b/index.html
@@ -37,6 +37,11 @@
             </div>  
             <button type="submit">등록 완료</button>
         </form>
+        <!-- form 태그는 웹브라우저(프론트엔드)에서 웹서버(백엔드)로 데이터를 넘기고자 할 때 input태그와 함께 작성해주는 태그 -->
     </div>
+    <!-- div 태그는 안에 또다른 태그나 값을 넣기 전까지는 영역과 공간을 가지지 않음 -->
+    <script src="script.js"></script>
+    <script></script>
+
 </body>
 </html>
