JS: 유효성 검사 완료, 프로젝트 1 완료
~  프로젝트1-4

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>수비코딩</title>
+    <title>회원 가입 화면</title>
     <link rel = "stylesheet" href="style.css">
 </head>
 <body>
@@ -42,6 +42,5 @@
     <!-- div 태그는 안에 또다른 태그나 값을 넣기 전까지는 영역과 공간을 가지지 않음 -->
     <script src="script.js"></script>
     <script></script>
-
 </body>
 </html>
