--- a/project2/index2.html
+++ b/project2/index2.html
@@ -16,7 +16,7 @@
                 <input type="text" id="screen" class="screen" readonly>
                 <table>
                     <tr>
-                        <td colspan="3"><button id="resetButton" style="width:100%; background-color: rgb(40, 183, 245)">C</button></td>
+                        <td colspan="3"><button id="resetButton" style="width:100%; background-color: darkblue; color:white">C</button></td>
                         <td><button>/</button></td>
                     </tr>
                     <tr>
@@ -39,7 +39,7 @@
                     </tr>
                     <tr>
                         <td colspan="3"><button style="width:100%; font-weight: bold;">0</button></td>
-                        <td><button id="result" style="background-color: rgb(244, 202, 18)">=</button></td>
+                        <td><button id="result" style="color: white; background-color:rgb(244, 202, 18)">=</button></td>
                     </tr>
                 </table>
             </div>
