--- a/project2/index2.html
+++ b/project2/index2.html
@@ -39,7 +39,7 @@
                     </tr>
                     <tr>
                         <td colspan="3"><button style="width:100%; font-weight: bold;">0</button></td>
-                        <td><button id="result" style="color: white; background-color:rgb(244, 202, 18)">=</button></td>
+                        <td><button id="result" style="color:white; background-color:lightcoral">=</button></td>
                     </tr>
                 </table>
             </div>
