--- a/project3/index3.html
+++ b/project3/index3.html
@@ -9,12 +9,11 @@
 <body>
     <h1>한국어 명언</h1>
     <div id = "quoteContainer" class = "quoteContainer">
-        <span id = "quote">
+        <span id = "quote"></span>
         <div id = "quoteButtons">
             <button id = "nextQuote">다음</button>
             <button id = "selectQuote">선택</button>
         </div>
-        </span>
     </div>
     <div id = "loader" style="display:none">로딩중..</div>
 
